--- a/runtime/kernel/kernel.vcxproj.filters
+++ b/runtime/kernel/kernel.vcxproj.filters
@@ -150,6 +150,12 @@
     <ClInclude Include="if\advanced_definition.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="os\detail\nox.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="os\detail\nox.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -282,6 +288,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="if\advanced_definition.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="os\detail\nox.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
