--- a/runtime/reflection/reflection.vcxproj.filters
+++ b/runtime/reflection/reflection.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClInclude Include="field_info.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="typeof.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="attribute.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -102,6 +108,12 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="field_info.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="typeof.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="attribute.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
