--- a/runtime/property_sheet/nox_common.props
+++ b/runtime/property_sheet/nox_common.props
@@ -7,6 +7,7 @@
     <IntDir>$(SolutionDir)build\intermediate\$(SolutionName)\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
     <_PropertySheetDisplayName>nox_common</_PropertySheetDisplayName>
     <EnableClangTidyCodeAnalysis>false</EnableClangTidyCodeAnalysis>
+    <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
