--- a/runtime/kernel/kernel.vcxproj
+++ b/runtime/kernel/kernel.vcxproj
@@ -71,6 +71,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="if\string_format.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="kernel.h">
       <SubType>
       </SubType>
@@ -250,6 +254,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="if\string.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="if\string_format.cpp">
       <SubType>
       </SubType>
     </ClCompile>
