--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /runtime/bin/source/ReflectionGenerator/x64/Debug
 /runtime/bin/source/ReflectionGenerator/bin/Debug/net7.0
 /runtime/bin/source/ReflectionGenerator/obj
+/runtime/bin/source/ReflectionGenerator/Sample/x64/Debug
