--- a/runtime/bin/source/ReflectionGenerator/ReflectionGenerator.csproj
+++ b/runtime/bin/source/ReflectionGenerator/ReflectionGenerator.csproj
@@ -2,13 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ClangSharp" Version="16.0.0" />
+    <PackageReference Include="libclang" Version="17.0.4" />
+    <PackageReference Include="libclang.runtime.win-x64" Version="17.0.4" />
+    <PackageReference Include="libClangSharp" Version="17.0.4" />
+    <PackageReference Include="libClangSharp.runtime.win-x64" Version="17.0.4" />
   </ItemGroup>
 
 </Project>
