--- a/runtime/kernel/kernel.vcxproj.filters
+++ b/runtime/kernel/kernel.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClInclude Include="if\string_format.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="math\quaternion_util.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -288,6 +291,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="if\string_format.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="math\quaternion_util.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
