--- a/runtime/kernel/kernel.vcxproj
+++ b/runtime/kernel/kernel.vcxproj
@@ -119,6 +119,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="math\quaternion_util.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="math\vector2d.h">
       <SubType>
       </SubType>
@@ -298,6 +302,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="math\quaternion.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="math\quaternion_util.cpp">
       <SubType>
       </SubType>
     </ClCompile>
