--- a/runtime/reflection/reflection.vcxproj.filters
+++ b/runtime/reflection/reflection.vcxproj.filters
@@ -45,7 +45,7 @@
     <ClInclude Include="manager.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="method_info.h">
+    <ClInclude Include="function_info.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="reflection_object.h">
@@ -95,7 +95,7 @@
     <ClCompile Include="manager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="method_info.cpp">
+    <ClCompile Include="function_info.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="reflection_object.cpp">
