--- a/runtime/reflection/reflection.vcxproj.filters
+++ b/runtime/reflection/reflection.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="attribute.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="reflection_system.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -114,6 +117,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="attribute.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="reflection_system.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
